2006-06-03  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten
	to call new C function
	* interfaces/R/src/rinterface.c (R_igraph_barabasi_aging_game) : added

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.idage) : 
	added time.window argument
	* interfaces/R/src/rinterface.c	(R_igraph_measure_dynamics_idage)
	(R_igraph_measure_dynamics_idage_st) : added time_window argument

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : added
	time.window argument
	* interfaces/R/src/rinterface.c
	(R_igraph_recent_degree_aging_game) : added
	
2006-05-29  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/par.R (igraph.par) : slightly different
	return values	
	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai)
	(layout.merge) : updated verbose argument
	* interfaces/R/igraph/R/package.R (.onLoad) : added default parameters
	* interfaces/R/igraph/R/print.R (print.igraph) : updated attribute
	printing, it is based on parameters now

2006-05-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/foreign.R (write.graph.lgl) : bug corrected
	* interfaces/R/igraph/R/foreign.R (write.graph) : lgl format added

	* interfaces/R/src/rinterface.c 
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr)
	(R_igraph_attribute_get_string_edge_attr) : handle vertex/edge seq

2006-05-27  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian) :
	added

2006-05-26  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	(print.igraph.es) : added

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
	indexing based on attributes a'le GUESS
	* interfaces/R/igraph/R/iterators.R (%--%, %->%, %<-%) : added

2006-05-25  Gabor Csardi  <csardi@kzoo.edu>
